# gpicker

./: .gitignore  Makefile.am  configure.ac.in  gpicker.h  gpicker.pc.in  gpicker_xmalloc.h  loading.c  main.c  simple_main.c
